--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -81,7 +81,7 @@
 <h4><span id="Subtraktivn.C3.AD_n.C3.A1stroje"></span><span class="mw-headline" id="Subtraktivn&iacute;_n&aacute;stroje">Subtraktivn&iacute; n&aacute;stroje</span></h4>
 <p>Jedn&aacute; se o n&aacute;stroje pro odstra&#328;ov&aacute;n&iacute; materi&aacute;lu ze st&aacute;vaj&iacute;c&iacute;ho t&#283;lesa.
 </p>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Pocket.svg&amp;filetimestamp=20170324053209&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pocket.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pocket.html" title="PartDesign Pocket">Pocket</a>: creates a pocket from a selected sketch.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Pocket.svg&amp;filetimestamp=20170324053209&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pocket.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pocket.html" title="PartDesign Pocket">Kapsa</a>: vytvo&#345;&iacute; kapsu z vybran&eacute;ho n&aacute;&#269;rtu.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Hole.svg&amp;filetimestamp=20240405093159&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Hole.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Hole.html" title="PartDesign Hole">Hole</a>: creates a hole feature from a selected sketch. The sketch must contain one or multiple circles.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Groove.svg&amp;filetimestamp=20170324053310&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Groove.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Groove.html" title="PartDesign Groove">Groove</a>: creates a groove by revolving a sketch around an axis.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractiveLoft.svg&amp;filetimestamp=20200917234122&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractiveLoft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractiveLoft.html" title="PartDesign SubtractiveLoft">Subtractive Loft</a>: creates a solid shape by making a transition between two or more sketches and subtracts it from the active body.</li></ul>
@@ -189,12 +189,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119210837
+Cached time: 20260119210909
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.234 seconds
-Real time usage: 0.361 seconds
+CPU time usage: 0.212 seconds
+Real time usage: 0.348 seconds
 Preprocessor visited node count: 465/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -205,18 +205,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.063      1 -total
- 34.10%   10.591      1 Template:Userdocnavi/cs
- 19.67%    6.109      2 Template:Navigation_menu_2
- 18.51%    5.750      1 Template:PartDesign_Tools_navi/cs
- 18.01%    5.595      1 Template:Version
-  9.36%    2.909      2 Template:Docnav
-  6.63%    2.058      5 Template:VersionPlus
-  4.92%    1.527      1 Template:TOCright
-  4.89%    1.520      1 Template:MenuCommand
+100.00%   23.092      1 -total
+ 25.88%    5.977      1 Template:Userdocnavi/cs
+ 24.09%    5.564      1 Template:PartDesign_Tools_navi/cs
+ 16.27%    3.758      2 Template:Navigation_menu_2
+ 12.57%    2.902      1 Template:MenuCommand
+ 10.24%    2.365      2 Template:Docnav
+  9.81%    2.266      1 Template:TOCright
+  7.15%    1.651      1 Template:Version
+  6.17%    1.425      5 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119210837 and revision id 1741260. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119210908 and revision id 1741262. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
