--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -85,7 +85,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Hole.svg&amp;filetimestamp=20240405093159&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Hole.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Hole.html" title="PartDesign Hole">Otvor</a>: vytvo&#345;&iacute; prvek otvoru z vybran&eacute;ho n&aacute;&#269;rtu. N&aacute;&#269;rt mus&iacute; obsahovat jeden nebo v&iacute;ce kruh&#367;.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Groove.svg&amp;filetimestamp=20170324053310&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Groove.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Groove.html" title="PartDesign Groove">Dr&aacute;&#382;ka</a>: vytvo&#345;&iacute; dr&aacute;&#382;ku oto&#269;en&iacute;m n&aacute;&#269;rtu kolem osy.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractiveLoft.svg&amp;filetimestamp=20200917234122&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractiveLoft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractiveLoft.html" title="PartDesign SubtractiveLoft">Ode&#269;tov&eacute; profilov&aacute;n&iacute;</a>: vytvo&#345;&iacute; pevn&yacute; tvar p&#345;echodem mezi dv&#283;ma nebo v&iacute;ce n&aacute;&#269;rtky a ode&#269;te ho od aktivn&iacute;ho t&#283;lesa.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractivePipe.svg&amp;filetimestamp=20200917233608&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractivePipe.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractivePipe.html" title="PartDesign SubtractivePipe">Subtractive Pipe</a>:  creates a solid shape by sweeping one or more sketches along an open or closed path and subtracts it from the active body.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractivePipe.svg&amp;filetimestamp=20200917233608&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractivePipe.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractivePipe.html" title="PartDesign SubtractivePipe">Ode&#269;tov&eacute; potrub&iacute;</a>:  vytvo&#345;&iacute; pevn&yacute; tvar ta&#382;en&iacute;m jednoho nebo v&iacute;ce n&aacute;&#269;rt&#367; pod&eacute;l otev&#345;en&eacute; nebo uzav&#345;en&eacute; cesty a ode&#269;te ho od aktivn&iacute;ho t&#283;lesa.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractiveHelix.svg&amp;filetimestamp=20210205040332&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractiveHelix.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractiveHelix.html" title="PartDesign SubtractiveHelix">Subtractive Helix</a>: creates a solid shape by sweeping a sketch along a helix and subtracts it from the active body.</li></ul>
 <ul><li><span id="PartDesign_CompPrimitiveSubtractive"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractiveBox.svg&amp;filetimestamp=20191212064103&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractiveBox.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Subtractive Primitive:</span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractiveBox.svg&amp;filetimestamp=20191212064103&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractiveBox.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractiveBox.html" title="PartDesign SubtractiveBox">Subtractive Box</a>: adds a subtractive box to the active body.</li></ul></dd></dl>
@@ -189,12 +189,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119211228
+Cached time: 20260119211333
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.263 seconds
-Real time usage: 0.851 seconds
+CPU time usage: 0.244 seconds
+Real time usage: 0.372 seconds
 Preprocessor visited node count: 465/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -205,18 +205,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.170      1 -total
- 33.98%   12.630      1 Template:Userdocnavi/cs
- 23.35%    8.680      1 Template:PartDesign_Tools_navi/cs
- 20.97%    7.794      2 Template:Navigation_menu_2
- 15.72%    5.843      2 Template:Docnav
-  7.01%    2.606      1 Template:Version
-  5.63%    2.091      1 Template:TOCright
-  5.33%    1.981      1 Template:MenuCommand
-  5.13%    1.908      5 Template:VersionPlus
+100.00%   23.192      1 -total
+ 31.24%    7.246      1 Template:Userdocnavi/cs
+ 25.59%    5.934      1 Template:PartDesign_Tools_navi/cs
+ 16.76%    3.886      2 Template:Navigation_menu_2
+ 12.84%    2.978      5 Template:VersionPlus
+  9.31%    2.159      2 Template:Docnav
+  7.18%    1.665      1 Template:TOCright
+  4.70%    1.089      1 Template:Version
+  4.14%    0.961      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119211227 and revision id 1741268. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119211332 and revision id 1741270. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
