--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -87,7 +87,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractiveLoft.svg&amp;filetimestamp=20200917234122&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractiveLoft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractiveLoft.html" title="PartDesign SubtractiveLoft">Ode&#269;tov&eacute; profilov&aacute;n&iacute;</a>: vytvo&#345;&iacute; pevn&yacute; tvar p&#345;echodem mezi dv&#283;ma nebo v&iacute;ce n&aacute;&#269;rtky a ode&#269;te ho od aktivn&iacute;ho t&#283;lesa.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractivePipe.svg&amp;filetimestamp=20200917233608&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractivePipe.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractivePipe.html" title="PartDesign SubtractivePipe">Ode&#269;tov&eacute; potrub&iacute;</a>:  vytvo&#345;&iacute; pevn&yacute; tvar ta&#382;en&iacute;m jednoho nebo v&iacute;ce n&aacute;&#269;rt&#367; pod&eacute;l otev&#345;en&eacute; nebo uzav&#345;en&eacute; cesty a ode&#269;te ho od aktivn&iacute;ho t&#283;lesa.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractiveHelix.svg&amp;filetimestamp=20210205040332&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractiveHelix.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractiveHelix.html" title="PartDesign SubtractiveHelix">Ode&#269;tov&aacute; &scaron;roubovice</a>: vytvo&#345;&iacute; pevn&yacute; tvar pomoc&iacute; ta&#382;en&iacute; n&aacute;&#269;rtu pod&eacute;l &scaron;roubovice a ode&#269;te ho od aktivn&iacute;ho t&#283;lesa.</li></ul>
-<ul><li><span id="PartDesign_CompPrimitiveSubtractive"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractiveBox.svg&amp;filetimestamp=20191212064103&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractiveBox.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Subtractive Primitive:</span></li></ul>
+<ul><li><span id="PartDesign_CompPrimitiveSubtractive"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractiveBox.svg&amp;filetimestamp=20191212064103&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractiveBox.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Ode&#269;tov&eacute; z&aacute;kladn&iacute; t&#283;leso:</span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractiveBox.svg&amp;filetimestamp=20191212064103&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractiveBox.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractiveBox.html" title="PartDesign SubtractiveBox">Subtractive Box</a>: adds a subtractive box to the active body.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractiveCylinder.svg&amp;filetimestamp=20191212064220&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractiveCylinder.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractiveCylinder.html" title="PartDesign SubtractiveCylinder">Subtractive Cylinder</a>: adds a subtractive cylinder to the active body.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractiveSphere.svg&amp;filetimestamp=20191212064432&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractiveSphere.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractiveSphere.html" title="PartDesign SubtractiveSphere">Subtractive Sphere</a>: adds a subtractive sphere to the active body.</li></ul></dd></dl>
@@ -189,12 +189,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119211426
+Cached time: 20260119211549
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.232 seconds
-Real time usage: 0.520 seconds
+CPU time usage: 0.204 seconds
+Real time usage: 0.392 seconds
 Preprocessor visited node count: 465/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -205,18 +205,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.589      1 -total
- 27.53%    7.596      1 Template:PartDesign_Tools_navi/cs
- 27.18%    7.498      1 Template:Userdocnavi/cs
- 16.94%    4.674      2 Template:Navigation_menu_2
- 10.58%    2.919      2 Template:Docnav
-  8.49%    2.343      1 Template:MenuCommand
-  7.40%    2.042      5 Template:VersionPlus
-  5.38%    1.485      1 Template:TOCright
-  4.79%    1.322      1 Template:Version
+100.00%   24.173      1 -total
+ 34.32%    8.297      1 Template:Userdocnavi/cs
+ 20.60%    4.981      1 Template:PartDesign_Tools_navi/cs
+ 18.32%    4.429      2 Template:Navigation_menu_2
+ 10.33%    2.496      2 Template:Docnav
+  9.20%    2.224      1 Template:Version
+  9.17%    2.217      5 Template:VersionPlus
+  6.79%    1.642      1 Template:MenuCommand
+  6.19%    1.497      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119211425 and revision id 1741272. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119211549 and revision id 1741274. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
